--- a/qr.html
+++ b/qr.html
@@ -1,60 +1,56 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>QR 코드 생성기</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            margin: 0;
-            background-color: #f0f0f0;
-        }
-        #qr-container {
-            padding: 20px;
-            background-color: #fff;
-            border-radius: 8px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            text-align: center;
-        }
-        textarea {
-            width: 300px;
-            height: 100px;
-            margin-bottom: 10px;
-            padding: 10px;
-            border-radius: 4px;
-            border: 1px solid #ccc;
-        }
-        button {
-            padding: 10px 20px;
-            border: none;
-            border-radius: 4px;
-            background-color: #007BFF;
-            color: white;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #0056b3;
-        }
-        #qrcode-image {
-            margin-top: 20px;
-        }
-    </style>
+  <meta charset="UTF-8">
+  <title>QR 코드 제네레이터</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/qrcodejs/1.0.0/qrcode.min.js"></script>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding: 30px;
+    }
+    input {
+      width: 300px;
+      padding: 10px;
+      font-size: 16px;
+    }
+    button {
+      padding: 10px 20px;
+      margin-left: 10px;
+      font-size: 16px;
+      cursor: pointer;
+    }
+    #qrcode {
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <div id="qr-container">
-        <h1>QR 코드 생성기</h1>
-        <textarea id="text-input" placeholder="QR 코드로 만들 텍스트나 URL을 입력하세요."></textarea>
-        <br>
-        <button onclick="generateQRCode()">생성하기</button>
-        <div id="qrcode-image"></div>
-    </div>
+  <h2>QR 코드 제네레이터</h2>
+  <input type="text" id="text" placeholder="텍스트 또는 URL 입력" />
+  <button onclick="generateQR()">생성</button>
 
-    </body>
+  <div id="qrcode"></div>
+
+  <script>
+    function generateQR() {
+      var qrContainer = document.getElementById("qrcode");
+      qrContainer.innerHTML = ""; // 이전 코드 제거
+      var text = document.getElementById("text").value;
+      if (text.trim() === "") {
+        alert("텍스트 또는 URL을 입력하세요!");
+        return;
+      }
+      new QRCode(qrContainer, {
+        text: text,
+        width: 200,
+        height: 200,
+        colorDark: "#000000",
+        colorLight: "#ffffff",
+        correctLevel: QRCode.CorrectLevel.H
+      });
+    }
+  </script>
+</body>
 </html>
